# src/packages/lambdas/src/assets/api/api.yaml
@@ -14,13 +14,16 @@ info:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.1.0
+
 externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
+
 servers:
   - url: https://virtserver.swaggerhub.com/TiagoLimaRocha/pet-store-api/1.0.0
-    description: SwaggerHub API Auto Mocking
+    description: SwaggerHub API for Example Petstore
   - url: https://petstore.swagger.io/v2
+
 tags:
   - name: pet
     description: Everything about your Pets
@@ -34,6 +37,7 @@ tags:
     externalDocs:
       description: Find out more about our store
       url: http://swagger.io
+
 paths:
   /signup:
     post:
@@ -53,56 +57,17 @@ paths:
         default:
           description: successful operation
 
-  /user/list:
-    get:
-      tags:
-        - user
-      summary: List users
-      operationId: listUsers
-      parameters:
-        - name: offset
-          in: query
-          description: The offset of the start of the list
-          required: false
-          style: form
-          explode: true
-          schema:
-            type: string
-        - name: pageSize
-          in: query
-          description: The total elements of the list per batch
-          required: false
-          style: form
-          explode: true
-          schema:
-            type: string
-      responses:
-        default:
-          description: successful operation
-
-  /user/login:
-    get:
+  /login:
+    post:
       tags:
         - user
       summary: Logs user into the system
-      operationId: loginUser
-      parameters:
-        - name: username
-          in: query
-          description: The user name for login
-          required: true
-          style: form
-          explode: true
+      operationId: login
+      requestBody:
+        required: true
+        application/json:
           schema:
-            type: string
-        - name: password
-          in: query
-          description: The password for login in clear text
-          required: true
-          style: form
-          explode: true
-          schema:
-            type: string
+            $ref: '#/components/schemas/LoginDetails'
       responses:
         '200':
           description: successful operation
@@ -131,12 +96,39 @@ paths:
         '400':
           description: Invalid username/password supplied
 
-  /user/logout:
+  /logout:
     get:
       tags:
         - user
       summary: Logs out current logged in user session
-      operationId: logoutUser
+      operationId: logout
+      responses:
+        default:
+          description: successful operation
+
+  /user/list:
+    get:
+      tags:
+        - user
+      summary: List users
+      operationId: listUsers
+      parameters:
+        - name: offset
+          in: query
+          description: The offset of the start of the list
+          required: false
+          style: form
+          explode: true
+          schema:
+            type: string
+        - name: pageSize
+          in: query
+          description: The total elements of the list per batch
+          required: false
+          style: form
+          explode: true
+          schema:
+            type: string
       responses:
         default:
           description: successful operation
@@ -324,6 +316,7 @@ components:
           default: false
       xml:
         name: Order
+
     Category:
       type: object
       properties:
@@ -334,6 +327,17 @@ components:
           type: string
       xml:
         name: Category
+
+    LoginDetails:
+      type: object
+      properties:
+        username:
+          type: string
+        password:
+          type: string
+      xml:
+        name: LoginDetails
+
     User:
       type: object
       properties:
@@ -358,6 +362,7 @@ components:
           format: int32
       xml:
         name: User
+
     Tag:
       type: object
       properties:
@@ -368,6 +373,7 @@ components:
           type: string
       xml:
         name: Tag
+
     Pet:
       required:
         - name
@@ -405,6 +411,7 @@ components:
             - sold
       xml:
         name: Pet
+
     ApiResponse:
       type: object
       properties:
@@ -415,6 +422,7 @@ components:
           type: string
         message:
           type: string
+
   requestBodies:
     Pet:
       description: Pet object that needs to be added to the store
@@ -435,6 +443,7 @@ components:
             items:
               $ref: '#/components/schemas/User'
       required: true
+
   securitySchemes:
     petstore_auth:
       type: oauth2
@@ -444,6 +453,7 @@ components:
           scopes:
             write:pets: modify pets in your account
             read:pets: read your pets
+
     api_key:
       type: apiKey
       name: api_key
